benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix010.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix010.oepc.yml/mix010.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix010.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_ungw554m/tmp/tmpa6c6l9ki.c
Compilation started
/tmp/BenchExec_run_ungw554m/tmp/tmpa6c6l9ki.c: In function ‘P2’:
/tmp/BenchExec_run_ungw554m/tmp/tmpa6c6l9ki.c:638:19: error: ‘FALSE’ undeclared (first use in this function)
  638 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_ungw554m/tmp/tmpa6c6l9ki.c:638:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
